--- a/1-introduction.qmd
+++ b/1-introduction.qmd
@@ -150,8 +150,6 @@ Preterm delivery has been associated with reduced transplacental transfer of ant
 
 Few studies have studied the transplacental transfer of NTS-specific antibodies;  in Vietnamese mother-child dyads ^30^, highly efficient transfer of NTS O antigen–specific antibodies was seen. However, this study did not present data on maternal co-morbidities that may impact antibody transfer such as malaria or HIV.
 
-The seroepidemiology (SAiNTS) study comprises a community cohort of 2400 children ages 0-5 years in a malaria-endemic Chikwawa in Southern Malawi. Paired serology samples tested for IgG to O-Ag to *S.* Typhimurium and *S.* Enteriditis (main serovars causing invasive NTS disease) as well as data on malaria status (Malaria Rapid Diagnostic Test and blood film), and other risk factors for iNTS including anaemia, malnutrition and sickle cell disease. Additionally, samples were collected from xx mother and infant (\<6 month) pairs.
-
 #### Anaemia
 
 #### Severe Acute Malnutrition
@@ -162,31 +160,35 @@ The seroepidemiology (SAiNTS) study comprises a community cohort of 2400 childre
 
 ## Public Health interventions for iNTS
 
-Declines in iNTS disease in children have been associated with improvements in malaria control in the Gambia, Kenya, and Tanzania (3,14,15), however, there is uncertainty about whether these associations are causal and therefore the extent to which malaria control will reduce iNTS disease incidence. Several ecological studies have explored associations between host factors and iNTS disease at a population level. Feasey *et al.* (7) used structural equation modelling to examine associations between malaria, SAM, and HIV with NTS bloodstream infections over a period of 10 years and found that iNTS declined by 11.8% annually over this period, while malaria incidence fell by 36% in the first two years, then stabilised, while admissions for SAM by declined by 5.8% per year. Statistically significant direct effects on iNTS disease from malaria and SAM (regression coefficients 0.56 and 0.20 respectively), as well as direct and indirect effects of HIV on iNTS disease through SAM (0.25 and 1.33 respectively), and indirect effect of rainfall (via effects on malaria and SAM). Declines in iNTS disease during this period may have been associated with successful antiretroviral, malaria, and malnutrition programs. Tack *et al.* (16) used principal components analysis and multivariate time series regression to examine associations of environmental and host factors on the seasonal dynamics of iNTS disease in the Democratic Republic of Congo, and found significant associations of iNTS disease with SAM with an incidence rate ratio (IRR) of 1.09 (95% CI: 1.01-1.17), malaria and anaemia combined with an IRR of 1.3 (95% CI 1.2 – 1.41), and direct effects of rainfall with an IRR of 1.13 (95% CI 1.04 – 1.21).
+Declines in iNTS disease in children have been associated with improvements in malaria control in the Gambia, Kenya, and Tanzania (3,14,15), however, there is uncertainty about whether these associations are causal and therefore the extent to which malaria control will reduce iNTS disease incidence. Several ecological studies have explored associations between host factors and iNTS disease at a population level. Feasey *et al.* [@feasey_modelling_2015] used structural equation modelling to examine associations between malaria, SAM, and HIV with NTS bloodstream infections over a period of 10 years and found that iNTS declined by 11.8% annually over this period, while malaria incidence fell by 36% in the first two years, then stabilised, while admissions for SAM by declined by 5.8% per year. Statistically significant direct effects on iNTS disease from malaria and SAM (regression coefficients 0.56 and 0.20 respectively), as well as direct and indirect effects of HIV on iNTS disease through SAM (0.25 and 1.33 respectively), and indirect effect of rainfall (via effects on malaria and SAM). Declines in iNTS disease during this period may have been associated with successful antiretroviral, malaria, and malnutrition programs. Tack *et al.* (16) used principal components analysis and multivariate time series regression to examine associations of environmental and host factors on the seasonal dynamics of iNTS disease in the Democratic Republic of Congo, and found significant associations of iNTS disease with SAM with an incidence rate ratio (IRR) of 1.09 (95% CI: 1.01-1.17), malaria and anaemia combined with an IRR of 1.3 (95% CI 1.2 – 1.41), and direct effects of rainfall with an IRR of 1.13 (95% CI 1.04 – 1.21).
 
 ## Assessing iNTS disease burden
 
 ### Blood culture surveillance
 
-Blood culture remains the gold standard diagnostic method for invasive salmonellosis, and existing surveillance depends on blood culture. Blood culture surveillance depends on clinical presentation to a health facility with blood culture facilities, which depends on health-seeking behaviors and availability of health facilities. Blood cultures demand a microbiological laboratory with sufficient resources, often in wealthier urban settings, and is not available in many parts of the world, particularly in the areas with the most at risk populations in impoverished communities in sub-Saharan Africa. Therefore the disease burden of invasive salmonellosis in many regions of the world is unknown. Blood culture has a high specificity, but a moderate sensitivity, particularly in young children where low sample volumes can reduce the sensitivity further \[ref\]. Exposure to antibiotics prior to having blood cultures taken can reduce sensitivity further. Blood cultures requires venous sampling which can be challenging in infants and people presenting in extremis including shock. There is also a risk of contamination if sterile technique is not observed, which can be challenging in many settings that do not have sufficient resources for hand hygiene and sterile equipment - this can lead to overgrowth with skin contaminants and reduce ability to detect salmonella??? \[ref\]. As a result blood culture surveillance significantly underestimates the incidence of invasive salmonellosis as illustrated by the surveillance pyramid [@fig-pyramid]. The degree of underestimation of incidence is likely to be much larger in typhoid, compared to iNTS due to the more severe presentation of INTS, and as a result higher presentation to health facilities. However, due to the high case fataility of iNTS, it likely a significant proportion don't make it to health facilities before death, also contributing to underestimation of disease. Many authors have reported adjusted estimates for typhoid incidence accounting for blood culture sensitivity and health-seeking behaviour [@meiring_burden_2021], however, this has not been done consistently for iNTS due to concerns that health-seeking behaviour is not as much of a concern for iNTS.
+Blood culture remains the gold standard diagnostic method for invasive salmonellosis, and existing surveillance depends on blood culture. Blood culture surveillance depends on clinical presentation to a health facility with blood culture facilities, which depends on health-seeking behaviors and availability of health facilities. Blood cultures demand a microbiological laboratory with sufficient resources, often in wealthier urban settings, and is not available in many parts of the world, particularly in the areas with the most at risk populations in impoverished communities in sub-Saharan Africa. Therefore the disease burden of invasive salmonellosis in many regions of the world is unknown. Blood culture has a high specificity, but a moderate sensitivity, particularly in young children where low sample volumes can reduce the sensitivity further \[ref\]. Exposure to antibiotics prior to having blood cultures taken can reduce sensitivity further. Blood cultures requires venous sampling which can be challenging in infants and people presenting in extremis including shock. There is also a risk of contamination if sterile technique is not observed, which can be challenging in many settings that do not have sufficient resources for hand hygiene and sterile equipment - this can lead to overgrowth with skin contaminants and reduce ability to detect salmonella??? \[ref\]. As a result blood culture surveillance significantly underestimates the incidence of invasive salmonellosis as illustrated by the surveillance pyramid [@fig-pyramid]. The degree of underestimation of incidence is likely to be much larger in typhoid, compared to iNTS due to the more severe presentation of INTS, and as a result higher presentation to health facilities. However, due to the high case fataility of iNTS, it likely a significant proportion don't make it to health facilities before death, also contributing to underestimation of disease. Hybrid surveillance models have been used to improve population incidence rate estimation, combining facility-based estimates, with community-based health seeking behviour to reported adjusted estimates for typhoid incidence and adjusted for blood culture sensitivity and health-seeking behaviour \[@meiring_burden_2021, @andrews2018\], however, this has not been done consistently for iNTS due to concerns that health-seeking behaviour has less impact due to the severity of the presentation of iNTS patients, although it is possible there is less severe presentation that does not present to hospital.
 
-Existing estimates of global incidence for iNTS disease have been based on systematic reviews inlcuding one carried out within of the Global Burden of Diseases Study (2017) [@stanaway_global_2019-1], which included studies from 1980-2017 that contained information on iNTS disease incidence, defining a case of iNTS disease as culture-confirmed NTS infection of a normally sterile site (eg, blood). A more recent systematic review was conducted by Marchello et al. [@marchello_incidence_2021], funded as part of an EU-funded consortium to develop iNTS vaccines. Stanaway et al. included 35 studies in the incidence estimates, and included hospital or clinic-based studies that made adjustments in their reported estimates for incomplete case finding and to the underlying catchment population. They did not include adjustments for health-seeking behaviour as this data was mainly available from household surveys of milder febrile illnesses. They used a Bayesian methods to fit geographical multi-level models to extrapolate incidence across geographic regions. Highest incidence of disease was reported in sub-Saharan Africa 34·5 (26·6 to 45·0) cases per 100,000, and highest in
+Existing estimates of global incidence for iNTS disease have been based on systematic reviews including one carried out within of the Global Burden of Diseases Study (2017) [@stanaway_global_2019-1], which included studies from 1980-2017 that contained information on iNTS disease incidence, defining a case of iNTS disease as culture-confirmed NTS infection of a normally sterile site (eg, blood). A more recent systematic review was conducted by Marchello et al. [@marchello_incidence_2021], funded as part of an EU-funded consortium to develop iNTS vaccines. Stanaway et al. included 35 studies in the incidence estimates, and included hospital or clinic-based studies that made adjustments in their reported estimates for incomplete case finding and to the underlying catchment population. They did not include adjustments for health-seeking behaviour as this data was mainly available from household surveys of milder febrile illnesses. They used a Bayesian methods to fit geographical multi-level models to extrapolate incidence across geographic regions. Highest incidence of disease was reported in sub-Saharan Africa 34·5 (26·6 to 45·0) cases per 100,000, and highest in
 
 Previous data from Malawi has shown that iNTS disease peaked in Malawi in 2002 reaching epidemic incidence of 242 cases per 100,000 population [@feasey_three_2015], and has been steadiliy declining to 6.9 per 100,000 in 2019 [@wilson_incidence_2022].
 
 ### Serosurveillance
 
-It is important to have high resolution regional data to inform vaccine implementation for both typhoid conjugate vaccines and development and evaluation of iNTS vaccines. Countries require granular evidence of disease burden in order to receive funding support from Gavi the Vaccine Alliance. Seroepidemiology uses antibody responses in the population to estimate disease burden \[Ref\]. It is employed for a range of pathogens including ......\[ref\].
+Serosurveillance measures serological markers in samples collected from a representative population sample, to assess population exposure to a pathogen and susceptability to infection. Serosurveillance has become a powerful tool with the development of multiplex laboratory testing computational modeling, to identify infectious disease threats and guide public health responses. This can be particularly informative when assessing vaccine coverage to identify gaps in immunity that might require targeted vaccine campaigns. Seroepidemiology has been used to inform vaccination strategies for measles and rubella . For some pathogens such as Hepatitis B, which is asympotomatic in children, serosurveillance is the only method for surveillance and way to evaluate vaccine impact.
 
-New approaches have been developed for estimating the burden of typhoid [@aiemjoy_estimating_2022] using IgG against hemolysin E (HlyE) which is a pore-forming toxin produced only by salmonella typhi and paratyphi, and not found in other salmonella species, which reduces cross-reactivity that reduces the specificity of other antibody markers such as IgG against LPS. Antibodies detected in individuals in the population represent exposure to a pathogen presenting that specific antigen at some time in the past, regardless of symptoms. Seroprevalance can be measured in a population by carrying out a cross-sectional serosurvey at a single point in time. Seroincidence can be estimated by measuring increases in antibody between two time points, indicating new infections occuring in this period. It can be difficult to define cut-offs to define seropositive and seronegative individuals, as the distribution of antibodies in the population is rarely bimodal, and standard reference cut-off values have not been identified. Waning antibodies over time can contribute to the difficulties in distinguishing between exposed and unexposed individuals. Variation in antibody levels with age make cut-offs even more challenging, particularly in high transmission settings, where children may rapidly reach a plateau of antibody levels [@nyirenda_sequential_2014] due to frequent exposure to pathogens in early life, which may or may not reflect symptomatic illness. This challenge exists to a greater extent with NTS where there are many salmonella subspecies within the same serogroup not associated with inavsive disease, that may induce cross-protection, but will overestimate the exposure to invasive serovars in the population. Techniques recently developed for estimating typhoid seroincidence for typhoid, using antibody decay kinetics to interpret
+It is important to have high resolution regional data to inform vaccine implementation for both typhoid conjugate vaccines and development and evaluation of iNTS vaccines. Countries require granular evidence of disease burden in order to receive funding support from Gavi the Vaccine Alliance. Seroepidemiology uses antibody responses in the population to estimate disease burden \[Ref\].
 
-Methods to estimate NTS seroincidence in low transmission settings, based on antibody decay profiles in culture-confirmed salmonella infections have been used in developed countries, where invasive disease is rarely seen [@falkenhorst_serological_2012]. However, this method is more difficult to apply to settings with high force of infection, where antibody levels can quickly reach a saturation point in early childhood.
+New approaches have been developed for estimating the burden of typhoid [@aiemjoy_estimating_2022] using IgG against hemolysin E (HlyE) which is a pore-forming toxin produced only by salmonella typhi and paratyphi, and not found in other salmonella species, which reduces cross-reactivity that reduces the specificity of other antibody markers such as IgG against LPS. Antibodies detected in individuals in the population represent exposure to a pathogen presenting that specific antigen at some time in the past, regardless of symptoms. Seroprevalance can be measured in a population by carrying out a cross-sectional serosurvey at a single point in time. Seroincidence can be estimated by measuring increases in antibody between two time points, indicating new infections occuring in this period. It can be difficult to define cut-offs to define seropositive and seronegative individuals, as the distribution of antibodies in the population is rarely bimodal, and standard reference cut-off values have not been identified. Waning antibodies over time can contribute to the difficulties in distinguishing between exposed and unexposed individuals. Variation in antibody levels with age make cut-offs even more challenging, particularly in high transmission settings, where children may rapidly reach a plateau of antibody levels in early life [@nyirenda_sequential_2014] due to frequent exposure to pathogens in high transmission settings. If antibodies wane very slowly such as Vi IgG, the seroprevlance will be directly related to the age distribution of the sampled population, with a saturation point being reached, as antibody levels plateau beyond a certain age. This challenge exists to a greater extent with NTS where there are many salmonella subspecies within the same serogroup not associated with invasive disease, that may induce cross-protection, but will overestimate the exposure to invasive serovars in the population.
+
+Newer techniques have developed for estimating typhoid seroincidence, using antibody decay kinetics in culture-confirmed cases to interpret antibody levels in the population and
+
+Methods to estimate NTS seroincidence in low transmission settings, based on antibody decay profiles in culture-confirmed salmonella infections have been used in developed countries, where invasive disease is rarely seen [@falkenhorst_serological_2012]. However, this method is more difficult to apply to settings with high force of infection, where antibody levels can quickly reach a saturation point in early childhood. There have been no large-scale community seroepidemiological studies using anti-NTS antibodies. There have been smaller cohorts investigating antibody responses to LPS immunoglobulins in Kenya [@peter2023], Malawi \[\@nyirenda_sequential_2014\] and Uganda [@stockdale_cross-sectional_2019].
 
 ![Surveillance capture pyramid, where the base represents all infections and the apex represents culture-positive cases detected at surveillance sites. Reproduced from [@aiemjoy2023]](1_images/surveillance%20pyramid.png){#fig-pyramid width="564"}
 
 ### Environmental surveillance
 
-Environmental surveillance has been proposed as a method to identify high burden sites for Typhoid Conjugate Vaccine (TCV), to complement blood culture and serosurveillance [@andrews_validation_2003]. Environmental surveillance requires the collection of enviromental samples from a range of sources including drinking water, sewage, air, or formites and using microbiological and molecular methods to screen for pathogens.
+Environmental surveillance has been proposed as a method to identify high burden sites for Typhoid Conjugate Vaccine (TCV), to complement blood culture and serosurveillance [@andrews_validation_2003]. Environmental surveillance requires the collection of enviromental samples from a range of sources including drinking water, sewage, air, or formites and using microbiological and molecular methods to screen for pathogens. Environmental surveillance has been used in SARS-COV2 to predict outbreaks prior
 
 ### Impact of SARS-COV2
 
