--- a/7-ChangePoint.qmd
+++ b/7-ChangePoint.qmd
@@ -21,7 +21,7 @@ editor: visual
 
 ## Introduction
 
-Understanding the age-distribution of natural immunity to non-typhoidal salmonella (NTS) in children living in areas endemic to invasive NTS is key to understanding potential windows of immune-susceptibility to disease. This knowledge is key to informing vaccine development, including identifying the ages at which children have a nadir of antibody that could be boosted by vaccine-derived immunity, and to explore the potential role for maternal vaccines. As described in the previous chapter, the key components are the role of maternally acquired immunity in the first 6 months of life, followed by acquisition of naturally acquired immunity after 6 months of life, which increases rapidly after exposure to enteric NTS. Data on the age of nadir and antibody concentration at this nadir across a range of epidemiological settings is essential to guide vaccine strategies across different countries and geographic settings with different patterns of host risk factors.
+Understanding the age-distribution of natural immunity to non-typhoidal salmonella (NTS) in children living in areas endemic to invasive NTS is key to understanding potential windows of immune-susceptibility to disease. This knowledge is key to informing vaccine development, including identifying the ages at which children have a nadir of antibody that could be boosted by vaccine-derived immunity, and to explore the potential role for maternal vaccines. As described in the previous chapter, the key components are the role of maternally acquired immunity in the first 6 months of life, followed by acquisition of naturally acquired immunity after 6 months of life, which increases rapidly after exposure to enteric NTS. Understanding the role of maternally acquired immunity in protection against invasive disease is vital in understanding natural protection against invasive disease and guiding vaccine strategies, including considerations for the potential role for maternal vaccines. Data on the age of nadir and antibody concentration at this nadir across a range of epidemiological settings is essential to guide vaccine strategies across different countries and geographic settings with different patterns of host risk factors.
 
 Malaria has been associated with increased risk of developing invasive NTS disease in children (3,4), which has been proposed to impair the innate, humoral and cell-mediated immune responses against NTS (5,6). Immunoglobulin-gamma (IgG) antibodies against NTS lipopolysaccharide (LPS) have been associated with protection against iNTS (7), and are being currently investigated as a potential correlate of protection for clinical vaccine trials. However, little attention has been paid to the role malaria may have on maternally acquired immunity. Placental malaria has been associated with impaired transplacental transfer of antibodies to a range of vaccine preventable infections (8–13), although the association has been inconsistent across studies.
 
